wip: create create-custom-application docs

--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -7,7 +7,9 @@ description: Learn how to use the existing Full Stack Application scaffold in or
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import preview2 from "./introduction/preview2.png";
+import scaffoldsList from "./getting-started/scaffolds-list.png";
+import fullStackAppScaffold from "./getting-started/full-stack-app-scaffold.png";
+import dependentApps from "./getting-started/dependent-apps.png";
 
 :::tip WHAT YOU’LL LEARN
 
@@ -23,10 +25,31 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 ## Full Stack Application Scaffold
 
-The best way to start building a new custom application would be to use the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold, which will automatically generate all of the fundamental application pieces for us. This includes the following:
+The best way to start building a new custom application would be to use the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold, which will automatically generate all of the fundamental application pieces for us. This includes the following.
 
-- GraphQL API project application - a folder
-- React project application -
+### GraphQL API
+
+A new GraphQL API created as a new [project application](/docs/key-topics/project-organization/project-applications-and-packages) within our Webiny project. We will use the [Extend GraphQL API](/docs/tutorials/extend-admin-area/introduction) scaffold to extend it, meaning, create new GraphQL types, queries, and mutations.
+
+This project application doesn't depend on any other project applications, meaning we can immediately deploy it once the scaffolding process has finished.
+
+Speaking of deployment, note that we'll need to deploy the newly created GraphQL API before jumping to React application development, simply because the React application relies on it. This is also something the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold will warn us about, and will offer to do it for us.
+
+### React Application
+
+A new React application created as a new [project application](/docs/key-topics/project-organization/project-applications-and-packages) within our Webiny project. Here, we won't be relying on any existing scaffolds. Instead, in order to recreate the original Pinterest application's user interface, we'll simply use our existing [React](https://reactjs.org/) and [Sass](https://sass-lang.com/) knowledge. As mentioned, we'll also use [Ant Design React library](https://ant.design/docs/react/introduce), which will make the whole process a bit faster.
+
+MENTION DEPLOYMENT / DEPENDENCY :DOWN:
+
+<CenteredImage
+  alt="React Application Depends on GraphQL API"
+  style={{ maxWidth: 500 }}
+  shadow={false}
+  canEnlarge={false}
+  src={dependentApps}
+/>
+
+## Running the Scaffold
 
 So, in our terminal of choice, from our project root, let's run the following command:
 
@@ -36,24 +59,39 @@ yarn webiny scaffold
 
 Running this command should give us the following list of available scaffolds:
 
-[IMAGE]
+<CenteredImage alt="Scaffolds List" style={{ maxWidth: 650 }} src={scaffoldsList} />
 
-Once we've selected the **Extend Admin Area** scaffold from the list, we'll get presented with the the following three questions:
+Once we've selected the **Full Stack Application** scaffold from the list, we'll get presented with the the following three questions:
 
-1. the path to our GraphQL API's plugins folder (`api/code/graphql/src/plugins` by default)
-2. the path to our Admin Area application's plugins folder (`apps/admin/code/src/plugins` by default)
-3. the name of the initial entity
+1. the name of the new full stack application
+2. the description of the new full stack application
+3. the path in which the new full stack application will be created
 
-For the first two, we can just use the default paths by simply pressing the **Enter** key. As the answer to the last question, we'll enter **CarManufacturer**.
+For the name, we'll go with **Pinterest Clone**. For description and path, we'll go with the provided defaults, where the path will automatically be set to **pinterest-clone**.
 
-Once we've answered all of the questions, after a quick confirmation step, scaffolding will start and eventually, we should end up with the following output in our terminal:
+Once we've answered all of the questions, after a quick confirmation step, scaffolding will start. Once the process has been completed, we'll also be asked about whether we want to include a simple GraphQL API example in the created application code. For now, we can go with **no** here.
 
-[IMAGE]
+Furthermore, we'll also be asked about whether we want to immediately deploy the newly created GraphQL API. Here, it's recommended we go with **yes**, and that's what we'll do.
+
+Ultimately, we should end up with the following output in our terminal:
+
+<CenteredImage
+  alt="Full Stack Application - Full Output"
+  style={{ maxWidth: 650 }}
+  src={fullStackAppScaffold}
+/>
 
 ## Using the Watch Command
 
-In order to actually see the changes that the **Extend Admin Area** scaffold performed and continue developing, we will start two separate watch sessions. This can be achieved via the [`webiny watch`](/docs/how-to-guides/use-watch-command) command.
+Once the scaffold process has been completed, it's time to start building our application.
 
+In order to do that effectively, we will need the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, which, essentially, does two things. First, it ensures that your application code is automatically built and deployed into the cloud, as you're making changes to it. Second, any changes to the cloud infrastructure code is also detected, and, likewise, will result in cloud infrastructure changes.
+
+:::info
+Note that, when it comes to frontend development, or, in our case, React application development, the command will not perform any automatic deployments. This is simply because frontend application development can still be performed locally, on the developer's machine. You only deploy the application when you need to have it online.
+:::
+
+Since the
 ### GraphQL API
 
 The following command will start a new watch session on our GraphQL API application code:
@@ -119,3 +157,7 @@ To learn more, continue reading the following [Extending Entities](/docs/tutoria
 #### Which database is used in the generated GraphQL API application code?
 
 The generated GraphQL API application code relies exclusively on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data. Of course, you're certainly free to [bring your own](/docs/how-to-guides/scaffolding/extend-graphql-api#storing-and-retrieving-data) databases and import different database clients, if need be.
+
+#### Do I need to deploy the created React application in order to continue development?
+
+No. As mentioned above, frontend application development can still be performed locally, on the developer's machine. You only deploy the application when you need to have it online.
