--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -7,7 +7,7 @@ description: Learn how to create a custom full stack application, powered by Rea
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import preview2 from "./introduction/preview2.png";
+import preview from "./introduction/preview.png";
 
 :::tip WHAT YOU’LL LEARN
 
@@ -66,10 +66,12 @@ Of course, we'll be building a much simpler version of it. The application will 
 
 This is how the end result will look like:
 
-<CenteredImage src={preview2} alt="The Pinterest Clone Application" />
+<CenteredImage src={preview} alt="The Pinterest Clone Application" />
 
 ## Prerequisites
 
-Except having an installed Webiny project (version `5.13.0` or greater) on top of which we can follow this tutorial, there are no special prerequisites that need to be fulfilled.
+In order to follow this tutorial, you should have a solid understanding of [JavaScript](https://developer.mozilla.org/en-US/docs/Web/javascript), [Node.js](https://nodejs.org/en/), [GraphQL](https://graphql.org/), and [React](https://reactjs.org/).
 
-In terms of previous knowledge, you should have a solid understanding of [JavaScript](https://developer.mozilla.org/en-US/docs/Web/javascript), [Node.js](https://nodejs.org/en/), and [React](https://reactjs.org/).
+Additionally, on the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also use the [Ant Design React library](https://ant.design/docs/react/introduce) to create the majority of the user interface. For both of these, a basic understanding will suffice.
+
+Finally, note that you should have a new Webiny project set up on your machine, version `5.13.0` or greater.
