--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -72,6 +72,6 @@ This is how the end result will look like:
 
 In order to follow this tutorial, you should have a solid understanding of [JavaScript](https://developer.mozilla.org/en-US/docs/Web/javascript), [Node.js](https://nodejs.org/en/), [GraphQL](https://graphql.org/), and [React](https://reactjs.org/).
 
-Additionally, on the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also use the [Ant Design React library](https://ant.design/docs/react/introduce) to create the majority of the user interface. For both of these, a basic understanding will suffice.
+Additionally, on the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also use the [Ant Design](https://ant.design/docs/react/introduce) React library to create the majority of the user interface. For both of these, a basic understanding will suffice.
 
 Finally, note that you should have a new Webiny project set up on your machine, version `5.13.0` or greater.
