--- a/docs/how-to-guides/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/extend-graphql-api.mdx
@@ -77,7 +77,7 @@ If you want to check out the full GraphQL schema that's generated during the sca
 
 ### Storing and Retrieving Data
 
-All of the generated GraphQL queries and mutations rely on a single database for storing and retrieving data. By default, this is [AWS DynamoDB](https://aws.amazon.com/dynamodb/), which is defined in [`api/pulumi/dev/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/dev/dynamoDb.ts) and [`api/pulumi/prod/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/dynamoDb.ts).
+All of the generated GraphQL queries and mutations rely on a single database for storing and retrieving data. By default, this is [Amazon DynamoDB](https://aws.amazon.com/dynamodb/), which is defined in [`api/pulumi/dev/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/dev/dynamoDb.ts) and [`api/pulumi/prod/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/dynamoDb.ts).
 
 For all database interactions, the generated application code relies on a library called [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox):
 
