--- a/docs/changelog/5.14.0.mdx
+++ b/docs/changelog/5.14.0.mdx
@@ -37,3 +37,11 @@ Please check the [Webiny 5.14.0 migration guide](/docs/how-to-guides/upgrade-web
 #### `webiny.config.ts` Now Contains Correct Values ([#1882](https://github.com/webiny/webiny-js/pull/1882))
 
 ✍️
+
+
+### Custom Apollo InMemoryCache ([1884](https://github.com/webiny/webiny-js/pull/1884))
+In Webiny 5.7.0 we introduced an [ApolloDynamicLink](/docs/changelog/5.7.0/#apollodynamiclink) plugin which allows you to hook into apollo-client link chain using plugins (instead of hard coding them during apollo-client setup). With that, we added support for modifying the query being executed, by using `AddQuerySelectionPlugin` plugin, which allows you to add new selection sets to the query.
+
+Recently, we discovered that, when data is returned from Apollo cache, it does not process apollo-client links, at all. This behaviour breaks the results returned from cache, if you're using `AddQuerySelectionPlugin` to add new selection sets to the GraphQL queries.
+
+With this release, we're introducing an extended `InMemoryCache` class which _does_ process `AddQuerySelectionPlugin` plugins to construct the correct query. Luckily, Apollo uses classes which allowed us to fix the issue without dirty hacks or forks! :rocket: :tada:
