fix: polish tutorial pages

--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -89,11 +89,11 @@ Ultimately, we should end up with the following output in our terminal:
 
 <CenteredImage
   alt="Full Stack Application - Full Output"
-  style={{ maxWidth: 650 }}
+  style={{ maxWidth: 750 }}
   src={fullStackAppScaffold}
 />
 
-As we can see, the scaffold created the GraphQL API inside the `pinterest-clone/api` folder, and the React application inside the `pinterest-clone/app` folder. Note that these folders are just [project application](/docs/key-topics/project-organization/project-applications-and-packages) folders (notice the `webiny.project.ts` file). The actual application code will be located in `pinterest-clone/api/code/graphql` and `pinterest-clone/app/code` folders.
+As we can see, the scaffold created the GraphQL API inside the [`pinterest-clone/api`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/api), and the React application inside the [`pinterest-clone/app`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app) folder. Note that these folders are just [project application](/docs/key-topics/project-organization/project-applications-and-packages) folders (notice the `webiny.application.ts` files). The actual application code will be located in [`pinterest-clone/api/code/graphql`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/api/code/graphql) and [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app/code) folders.
 
 ```bash
 pinterest-clone
@@ -115,10 +115,6 @@ pinterest-clone
 Once the scaffolding process has been completed, it's time to start building our application.
 
 In order to do that effectively, we will need the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, which ensures all of our application and cloud infrastructure code changes are detected, compiled, and automatically deployed into the cloud, when required.
-
-:::note
-When it comes to frontend development, or, in our case, React application development, the command will not perform any automatic deployments. This is simply because frontend application development can still be performed locally, on the developer's machine. You only deploy the application when you need to have it online.
-:::
 
 Since two separate project applications were created in the scaffolding process, we'll need to run two separate [`webiny watch`](/docs/how-to-guides/use-watch-command) commands.
 
@@ -146,27 +142,27 @@ yarn webiny watch pinterest-clone/app --env dev
 Once started, by default, the React application should be locally accessible via [http://localhost:3001](http://localhost:3001).
 :::
 
-#### No Initial Deployment
+#### No Continuous Deployment Needed
 
-In contrast to the [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#graphql-api) development, where the application code needs to be redeployed into the cloud as we're making changes to it, React application can be developed locally. Meaning, once the watch command is run, no automatic deployments will be performed.
+In contrast to [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#graphql-api) development, where the application code needs to be redeployed into the cloud as we're making changes to it, React application can be developed locally. Meaning, once the watch command is run, no automatic deployments will be performed.
 
 #### Why the `--env` Argument?
 
-Note that we need to specify the environment via the `--env` flag, even when watching the React application. This is because the `watch` and `build` scripts need to pick up some of the values exported from GraphQL API's cloud infrastructure code, for a specific environment. For example, in order to interact with the GraphQL API, the React application needs to know its URL. Since we could potentially have our GraphQL API deployed into several environments, we need to specify it.
+Note that we need to specify the environment via the `--env` flag, even when watching the React application. This is because the [`watch`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L21) and [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L31) scripts need to pick up some of the values exported from GraphQL API's cloud infrastructure code, for a specific environment. For example, in order to interact with the GraphQL API, the React application needs to know its URL. Since we could potentially have our GraphQL API deployed into several environments, we need to specify it.
 
-## Final Result
+### Final Result
 
-The following screenshot shows the two watch commands run side-by-side in two separate terminal sessions:
+The following screenshot shows the two [`webiny watch`](/docs/how-to-guides/use-watch-command) commands run side-by-side in two separate terminal sessions:
 
 <CenteredImage alt="Watching GraphQL API and React Application" src={watchCommands}/>
 
-Once the two watch sessions have been started, we can start building our application. In the next section, we'll start by extending the GraphQL API with a basic set of CRUD GraphQL query and mutation operations.
+Once the two watch sessions have been started, we can start building our application. In the next section, we'll start by extending the GraphQL API with a basic set of [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) GraphQL query and mutation operations.
 
 ## FAQ
 
 #### Which database is used in the generated GraphQL API application code?
 
-The generated GraphQL API application code relies exclusively on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data. Of course, you're certainly free to [bring your own](/docs/how-to-guides/scaffolding/extend-graphql-api#storing-and-retrieving-data) databases and import different database clients, if need be. In essence, this will require you to remove the Amazon DynamoDB table definition in the cloud infrastructure code, and integrate the preferred database client in your application code.
+The generated GraphQL API application code relies exclusively on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data. Of course, you're certainly free to bring your own databases and import different database clients, if need be. In essence, this will require you to remove the Amazon DynamoDB table definition in the cloud infrastructure code, and integrate the preferred database and a database client in your application code.
 
 #### Do I need to deploy the created React application in order to continue development?
 
