--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -7,7 +7,8 @@ description: Learn how to create a custom full stack application, powered by Rea
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import preview from "./introduction/preview.png";
+import viewPin from "./introduction/view-pin.png";
+import viewPins from "./introduction/view-pins.png";
 
 :::tip WHAT YOU’LL LEARN
 
@@ -35,7 +36,7 @@ Some examples of what you can build with Webiny today are:
 - microservices
 - and more
 
-No matter what you end up building, it's worth pointing out that all of these different types of applications consist of two pieces: **application** and **cloud infrastructure** code.
+No matter what you end up building, it's worth pointing out that all of these different types of applications consist of two fundamental pieces: **application** and **cloud infrastructure** code.
 
 **Application code** is your frontend and backend code. For example, a [React](https://reactjs.org/) application with all of its components, hooks, providers, and so on, is code that falls into this category. On the backend side, we also have [GraphQL API](https://graphql.org/) schema definition, resolver functions, and basically any type of business, authentication, and authorization logic that might be required.
 
@@ -55,23 +56,59 @@ And that's what we'll be exploring in this tutorial, by building a completely cu
 
 ## The Goal
 
-The goal of this tutorial is to learn how we can create a full stack application, using Webiny serverless application framework. More specifically, we'll be building an application that is essentially a clone of [Pinterest](https://help.pinterest.com/en/guide/all-about-pinterest), a popular website for finding ideas like recipes, home and style inspiration, and more.
+The goal of this tutorial is to learn how we can create a full stack application, using Webiny serverless application framework. More specifically, we'll be building a browser application that is essentially a clone of [Pinterest](https://help.pinterest.com/en/guide/all-about-pinterest), a popular website for finding ideas like recipes, home and style inspiration, and more.
 
-Of course, we'll be building a much simpler version of it. The application will allow users to sign up, create new pins (image upload included), and list pins created by themselves and other users as well. Which means we'll need to cover the following topics:
+Of course, we'll be building a much simpler version of it. The application will allow users to:
+
+- sign up and log in into the application
+- create new **pins** which will consist of three pieces of information: title, description, and a cover image
+- list and view pins created by themselves and other users
+
+This is the end result we're aiming to achieve:
+
+<CenteredImage src={viewPins} alt="The Pinterest Clone Application - Pins List" />
+<CenteredImage src={viewPin} alt="The Pinterest Clone Application - Pin Details" />
+
+For now, we won't go into the specifics of which tools and libraries we will use, but we will say the application will be completely serverless. More on this soon, in the following sections.
+
+<!--
+Which means we'll need to cover the following topics:
 
 - how to use the Full Stack Application scaffold in order to start building in no time
 - create the necessary user interface and GraphQL API for creating and listing pins
 - using [Amazon Cognito](https://aws.amazon.com/cognito/), enable users to sign up and later sign in
 - using [Amazon S3](https://aws.amazon.com/s3/), enable users to upload and attach an image to pins
 
-This is how the end result will look like:
-
 <CenteredImage src={preview} alt="The Pinterest Clone Application" />
+
+1. enable users to list pins created by different users:
+
+
+
+2. the pin page, which will show pin details:
+
+<CenteredImage shadow={false} alt="Viewing a Pin" src={viewPin} />
+
+
+### Tools and Libraries
+
+As our application's backend, we'll create a simple GraphQL API which will define all of the necessary GraphQL types, query, mutations, and their respective resolver functions.
+
+The GraphQL API will be consumed by a frontend React application, which will consist of two pages:
+
+
+
+With these, we'll also need to create a simple form which will enable users to create new pins. As mentioned, every pin will contain a cover image, so for storing these, we'll use [Amazon S3](https://aws.amazon.com/s3/).
+
+We'll also need signup and log in functionality, for which we'll use [Amazon Cognito](https://aws.amazon.com/cognito/).
+
+All of these, and more, will be covered in the following sections of this tutorial. -->
+
 
 ## Prerequisites
 
 In order to follow this tutorial, you should have a solid understanding of [JavaScript](https://developer.mozilla.org/en-US/docs/Web/javascript), [Node.js](https://nodejs.org/en/), [GraphQL](https://graphql.org/), and [React](https://reactjs.org/).
 
-Additionally, on the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also use the [Ant Design](https://ant.design/docs/react/introduce) React library to create the majority of the user interface. For both of these, a basic understanding will suffice.
+Furthermore, on the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also use the [Ant Design](https://ant.design/docs/react/introduce) React library to create the majority of the user interface. For both of these, a basic understanding will suffice.
 
 Finally, note that you should have a new Webiny project set up on your machine, version `5.13.0` or greater.
