--- a/docs/changelog/5.14.0.mdx
+++ b/docs/changelog/5.14.0.mdx
@@ -20,7 +20,9 @@ Please check the [Webiny 5.14.0 migration guide](/docs/how-to-guides/upgrade-web
 
 ### Fixed Previewing Pages via Page Builder Editor ([#1883](https://github.com/webiny/webiny-js/pull/1883))
 
-✍️
+In some cases, previewing draft pages via the Page Builder editor would not work, because, in the page preview URL, the `__tenant` query parameter wouldn't be set correctly. You might have noticed the weird `[Object object]` value assigned to it.
+
+This has now been addressed, page previewing should work correctly.
 
 ## Development
 
@@ -28,18 +30,40 @@ Please check the [Webiny 5.14.0 migration guide](/docs/how-to-guides/upgrade-web
 
 #### Enabled Imports Using Tilde ([#1881](https://github.com/webiny/webiny-js/pull/1881))
 
-✍️
+We've received several reports of import statements using the tilde (**~**) symbol not working. for example:
+
+```ts
+import myComponent from "~/components/Layout";
+```
+
+This was the case only for frontend (React) applications. GraphQL APIs worked as expected.
+
+In any case, an addition to the built-in Webpack configuration has been made, so from now on, this should work as expected.
 
 #### Using System Font ([#1882](https://github.com/webiny/webiny-js/pull/1882))
 
-✍️
+By mistake, the application code that was generated during the [React Application](#) scaffolding process would import a custom font. In almost all cases, the font would not be available on user's machine, making the application a bit less visually appealing.
 
-#### `webiny.config.ts` Now Contains Correct Values ([#1882](https://github.com/webiny/webiny-js/pull/1882))
+Because of this, we've switched to the **Trebuchet MS, sans-serif** system font, so that everybody gets a consistent first impression of the application.
 
-✍️
+### Full Stack Application Scaffold
 
+#### `webiny.config.ts` Updated Correctly ([#1882](https://github.com/webiny/webiny-js/pull/1882))
+
+In some cases, upon using the recently introduced [Full Stack Application](#) scaffold, the `webiny.config.ts` file would not get updated correctly. This would result in the React application not being able to communicate with the deployed GraphQL API, leaving the user confused and unable to continue.
+
+The config file will now be correctly updated, so you can start building your application without any unexpected blockers on the way.
+
+### CI/CD Scaffold
+
+#### All Existing Repositories Visible ([@IzioDev](https://github.com/IzioDev), [#1877](https://github.com/webiny/webiny-js/pull/1877))
+
+While going through the [CI/CD](#) scaffold's setup wizard, if a user wanted to use an existing GitHub repository, the repositories list would only show the first one hundred entries. So, if a user had more than one hundred repositories, she/he would not be able to pick the wanted one, forcing the user to perform all kinds of workarounds to be able to complete the wizard.
+
+Special thanks to [IzioDev](https://github.com/IzioDev) for taking care of this.
 
 ### Custom Apollo InMemoryCache ([1884](https://github.com/webiny/webiny-js/pull/1884))
+
 In Webiny 5.7.0 we introduced an [ApolloDynamicLink](/docs/changelog/5.7.0/#apollodynamiclink) plugin which allows you to hook into apollo-client link chain using plugins (instead of hard coding them during apollo-client setup). With that, we added support for modifying the query being executed, by using `AddQuerySelectionPlugin` plugin, which allows you to add new selection sets to the query.
 
 Recently, we discovered that, when data is returned from Apollo cache, it does not process apollo-client links, at all. This behaviour breaks the results returned from cache, if you're using `AddQuerySelectionPlugin` to add new selection sets to the GraphQL queries.
