--- a/docs/changelog/5.14.0.mdx
+++ b/docs/changelog/5.14.0.mdx
@@ -6,6 +6,9 @@ keywords: ["webiny", "version", "5.14.0", "changelog"]
 description: See what's new in Webiny version 5.14.0.
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import pagePreviewNotWorking from "./5.14.0/page-preview-not-working.png"
+
 # Changes
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.14.0`.
@@ -20,7 +23,10 @@ Please check the [Webiny 5.14.0 migration guide](/docs/how-to-guides/upgrade-web
 
 ### Fixed Previewing Pages via Page Builder Editor ([#1883](https://github.com/webiny/webiny-js/pull/1883))
 
-In some cases, previewing draft pages via the Page Builder editor would not work, because, in the page preview URL, the `__tenant` query parameter wouldn't be set correctly. You might have noticed the weird `[Object object]` value assigned to it.
+In some cases, previewing draft pages via the Page Builder editor would not work, because, in the page preview URL, the `__tenant` query parameter wouldn't be set correctly. You might have noticed the weird `[object Object]` value assigned to it.
+
+<CenteredImage alt="Page Builder Editor - Page Preview Not Working" src={pagePreviewNotWorking} />
+
 
 This has now been addressed, page previewing should work correctly.
 
@@ -36,29 +42,29 @@ We've received several reports of import statements using the tilde (**~**) symb
 import myComponent from "~/components/Layout";
 ```
 
-This was the case only for frontend (React) applications. GraphQL APIs worked as expected.
+This was the case only for frontend (React) applications. On the GraphQL APIs side, this worked as expected.
 
 In any case, an addition to the built-in Webpack configuration has been made, so from now on, this should work as expected.
 
 #### Using System Font ([#1882](https://github.com/webiny/webiny-js/pull/1882))
 
-By mistake, the application code that was generated during the [React Application](#) scaffolding process would import a custom font. In almost all cases, the font would not be available on user's machine, making the application a bit less visually appealing.
+The application code that was generated during the [React Application](/docs/how-to-guides/scaffolding/react-application) scaffolding process would import a custom font. In almost all cases, the font would not be available on user's machine, making the application a bit less visually appealing.
 
-Because of this, we've switched to the **Trebuchet MS, sans-serif** system font, so that everybody gets a consistent first impression of the application.
+Because of this, we've switched to the **Trebuchet MS, sans-serif** system font, so that everybody gets a consistent initial look of the application.
 
 ### Full Stack Application Scaffold
 
 #### `webiny.config.ts` Updated Correctly ([#1882](https://github.com/webiny/webiny-js/pull/1882))
 
-In some cases, upon using the recently introduced [Full Stack Application](#) scaffold, the `webiny.config.ts` file would not get updated correctly. This would result in the React application not being able to communicate with the deployed GraphQL API, leaving the user confused and unable to continue.
+In some cases, upon using the recently introduced [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold, the [`webiny.config.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-full-stack-app/templates/essentials/code/webiny.config.ts) file would not get updated correctly. This would result in the React application not being able to communicate with the deployed GraphQL API, leaving the user confused and unable to continue.
 
-The config file will now be correctly updated, so you can start building your application without any unexpected blockers on the way.
+The file in question is now correctly updated during the scaffolding process, so you can start building your application without any unexpected blockers on the way.
 
 ### CI/CD Scaffold
 
 #### All Existing Repositories Visible ([@IzioDev](https://github.com/IzioDev), [#1877](https://github.com/webiny/webiny-js/pull/1877))
 
-While going through the [CI/CD](#) scaffold's setup wizard, if a user wanted to use an existing GitHub repository, the repositories list would only show the first one hundred entries. So, if a user had more than one hundred repositories, she/he would not be able to pick the wanted one, forcing the user to perform all kinds of workarounds to be able to complete the wizard.
+While going through the [CI/CD](/docs/how-to-guides/scaffolding/ci-cd) scaffold's setup wizard, if a user wanted to use an existing GitHub repository, the repositories list would only show the first one hundred entries. So, if a user had more than one hundred repositories, she/he would not be able to pick the wanted one, forcing the user to perform all kinds of workarounds to be able to complete the wizard.
 
 Special thanks to [IzioDev](https://github.com/IzioDev) for taking care of this.
 
