--- a/docs/changelog/5.14.0.mdx
+++ b/docs/changelog/5.14.0.mdx
@@ -68,7 +68,7 @@ While going through the [CI/CD](/docs/how-to-guides/scaffolding/ci-cd) scaffold'
 
 Special thanks to [IzioDev](https://github.com/IzioDev) for taking care of this.
 
-### Custom Apollo InMemoryCache ([1884](https://github.com/webiny/webiny-js/pull/1884))
+### Custom Apollo InMemoryCache ([#1884](https://github.com/webiny/webiny-js/pull/1884))
 
 In Webiny 5.7.0 we introduced an [ApolloDynamicLink](/docs/changelog/5.7.0/#apollodynamiclink) plugin which allows you to hook into apollo-client link chain using plugins (instead of hard coding them during apollo-client setup). With that, we added support for modifying the query being executed, by using `AddQuerySelectionPlugin` plugin, which allows you to add new selection sets to the query.
 
